--- a/multiboot/Makefile
+++ b/multiboot/Makefile
@@ -2,21 +2,21 @@ CC ?= gcc
 LD ?= ld
 
 CFLAGS := -g -m64 -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -ffreestanding \
-	-mcmodel=kernel -fno-pic -Wall -Wextra -Werror -pedantic -std=c99 \
-	-Wframe-larger-than=1024 -Wstack-usage=1024 \
-	-Wno-unknown-warning-option $(if $(DEBUG),-DDEBUG)
+    -mcmodel=kernel -fno-pic -Wall -Wextra -Werror -pedantic -std=c99 \
+    -Wframe-larger-than=1024 -Wstack-usage=1024 \
+    -Wno-unknown-warning-option $(if $(DEBUG),-DDEBUG)
 LFLAGS := -nostdlib -z max-page-size=0x1000
 
-INC := ./inc
+INC := ./include
 SRC := ./src
 
-C_SOURCES := $(shell find $(SRC)/*.c)
-C_OBJECTS := $(C_SOURCES:.c=.o)
-C_DEPS := $(C_SOURCES:.c=.d)
+C_SOURCES := $(shell find $(SRC) -name '*.c')
+C_OBJECTS := $(C_SOURCES:%.c=%.o)
+C_DEPS := $(C_SOURCES:%.c=%.d)
 
-S_SOURCES := $(shell find $(SRC)/*.S)
-S_OBJECTS := $(S_SOURCES:.S=.o)
-S_DEPS := $(S_SOURCES:.S=.d)
+S_SOURCES := $(shell find $(SRC) -name '*.S')
+S_OBJECTS := $(S_SOURCES:%.S=%.o)
+S_DEPS := $(S_SOURCES:%.S=%.d)
 
 OBJ := $(C_OBJECTS) $(S_OBJECTS)
 DEP := $(C_DEPS) $(S_DEPS)
@@ -24,7 +24,7 @@ DEP := $(C_DEPS) $(S_DEPS)
 all: kernel
 
 kernel: $(OBJ) kernel.ld
-	$(LD) $(LFLAGS) -T kernel.ld -o $@ $(OBJ)
+	$(LD) $(LFLAGS) -T kernel.ld -o kernel $(OBJ)
 
 $(S_OBJECTS): %.o: %.S
 	$(CC) -D__ASM_FILE__ -I$(INC) -g -MMD -c $< -o $@
