added launch.json for debug

--- a/multiboot/Makefile
+++ b/multiboot/Makefile
@@ -1,5 +1,6 @@
 CC ?= gcc
 LD ?= ld
+GDB ?= gdb
 
 CFLAGS := -g -m64 -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -ffreestanding \
     -mcmodel=kernel -fno-pic -Wall -Wextra -Werror -pedantic -std=c99 \
@@ -34,6 +35,18 @@ $(C_OBJECTS): %.o: %.c
 
 -include $(DEP)
 
+.PHONY: start
+start: all
+	qemu-system-x86_64 -kernel kernel
+
+
 .PHONY: clean
 clean:
 	rm -f kernel $(OBJ) $(DEP)
+
+
+.PHONY: debug
+debug: all
+	qemu-system-x86_64 -kernel kernel -S -gdb tcp::1234
+
+
